<resources>
    <string name="nfibet3_app_name">1x</string>
    <string name="nfibet3_app_name_2">1x</string>
    <string name="nfibet3_Winnerssum">result</string>
    <string name="nfibet3_Winnersers">Сколько можно выиграть?</string>
    <string name="nfibet3_moneyWinners">Если поставить, ₽</string>
    <string name="nfibet3_koefWinners">На коэффициент</string>
    <string name="nfibet3_WinnerspayWinners">ВЫИГРЫШ</string>
    <string name="nfibet3_CalculatorWinners">Calculator</string>
    <string name="nfibet3_WrestlingWinners">Wrestling</string>
    <string name="nfibet3_BadmintonWinners">Badminton</string>
    <string name="nfibet3_VolleyballWinners">Volleyball</string>
    <string name="nfibet3_Water_poloWinners">Water polo</string>
    <string name="nfibet3_HandballWinners">Handball</string>
    <string name="nfibet3_text_num1BkcityresTXT">Tennis is a racket sport that can be played individually against a single opponent (singles) or between two teams of two players each (doubles). Each player uses a tennis racket that is strung with cord to strike a hollow rubber ball covered with felt over or around a net and into the opponent\'s court. The object of the game is to manoeuvre the ball in such a way that the opponent is not able to play a valid return. The player who is unable to return the ball validly will not gain a point, while the opposite player will Tennis is an Olympic sport and is played at all levels of society and at all ages. The sport can be played by anyone who can hold a racket, including wheelchair users. The modern game of tennis originated in Birmingham, England, in the late 19th century as lawn tennis.</string>
    <string name="nfibet3_text_num2BkcityresTXT">Historians believe that the game\'s ancient origin lay in 12th century northern France, where a ball was struck with the palm of the hand.[12] Louis X of France was a keen player of jeu de paume (game of the palm), which evolved into real tennis, and became notable as the first person to construct indoor tennis courts in the modern style. Louis was unhappy with playing tennis outdoors and accordingly had indoor, enclosed courts made in Paris around the end of the 13th century. In due course this design spread across royal palaces all over Europe. In June 1316 at Vincennes, Val-de-Marne, and folloWinnersg a particularly exhausting game, Louis drank a large quantity of cooled Winnerse and subsequently died of either pneumonia or pleurisy, although there was also suspicion of poisoning.</string>
    <string name="nfibet3_text_number3BkcityresTXT">Wrestling is a combat sport involving grappling-type techniques such as clinch fighting, throws and takedowns, joint locks, pins and other grappling holds. The sport can either be genuinely competitive or sportive entertainment (see professional wrestling). Wrestling comes in different forms such as freestyle, Greco-Roman, judo, sambo, folkstyle, catch, submission, sumo, pehlwani, shuai jiao and others.[1] A wrestling bout is a physical competition, between two (sometimes more) competitors or sparring partners, who attempt to gain and maintain a superior position. There are a wide range of styles with varying rules, with both traditional historic and modern styles. Wrestling techniques have been incorporated into other martial arts as well as military hand-to-hand combat systems.</string>
    <string name="nfibet3_text_num4BkcityresTXT">In Ancient Greece wrestling occupied a prominent place in legend, literature and philosophy. Wrestling competition, brutal in many aspects, served as the focal sport of the ancient Olympic Games. Ancient Romans borrowed heavily from Greek wrestling, but eliminated much of its brutality. Wrestling is referenced throughout both Ancient Greek and Roman literature. Many philosophers and leaders practiced wrestling and/or referenced the sport frequently in their works, most notably Plato, Socrates, Aristotle, Xenophon, Epictetus, Seneca, Plutarch and Marcus Aurelius. Dicaearchus wrote that Plato wrestled at the Isthmian games. Many of Plato\'s dialogues are set in wrestling schools. Ancient Greek lyric poet Pindar wrote victory odes, grouped into four books named after the Olympian, Pythian, Isthmian.</string>
    <string name="nfibet3_text_num5BkcityresTXT">Badminton is a racquet sport played using racquets to hit a shuttlecock across a net. Although it may be played with larger teams, the most common forms of the game are singles (with one player per side) and doubles (with two players per side). Badminton is often played as a casual outdoor activity in a yard or on a beach; formal games are played on a rectangular indoor court. Points are scored by striking the shuttlecock with the racquet and landing it within the opposing side\'s half of the court.  Each side may only strike the shuttlecock once before it passes over the net. Play ends once the shuttlecock has struck the floor or if a fault has been called by the umpire, service judge, or (in their absence) the opposing side.</string>
    <string name="nfibet3_text_num6BkcityresTXT">Игра разработана в Британской Индии на основе более ранней игры Battledore и Волан. В европейской игре доминировала Дания, но игра стала очень популярной в Азии, где в недавних соревнованиях доминировал Китай. С 1992 года бадминтон является летним олимпийским видом спорта с четырьмя видами спорта: одиночные соревнования среди мужчин, одиночные игры среди мужчин, пары среди мужчин и женщины в паре. Бадминтон развился в середине 19 века среди офицеров-экспатриантов Британской Индии как вариант более ранней игры в баттлдор и волан. (Батлдор был старым термином для ракетки.)</string>
    <string name="nfibet3_text_num7BkcityresTXT"> Volleyball is a team sport in which two teams of six players are separated by a net. Each team tries to score points by grounding a ball on the other team\'s court under organized rules.[1] It has been a part of the official program of the Summer Olympic Games since Tokyo 1964. Beach volleyball was introduced to the programme at the Atlanta 1996. The adapted version of volleyball at the Summer Paralympic Games is sitting volleyball.causing the ball to touch the ground or floor outside the opponents\' court or without first passing over the net; catching and throWinnersg the ball; double hit: two consecutive contacts with the ball made by the same player; four consecutive contacts with the ball made by the same team; net foul: touching the net during play; foot fault.</string>
    <string name="nfibet3_text_num8BkcityresTXT">In December 1895,[5] in Holyoke, Massachusetts (United States), William G. Morgan, a YMCA physical education director, created a new game called Mintonette, a name derived from the game of badminton,[6] as a pastime to be played (preferably) indoors and by any number of players. The game took some of its characteristics from other sports such as baseball, tennis and handball.[7] Another indoor sport, basketball, was catching on in the area, having been invented just ten miles (sixteen kilometres) away in the city of Springfield, Massachusetts, only four years before. Mintonette was designed to be an indoor sport, less rough than basketball, for older members of the YMCA, while still requiring a bit of athletic effort.</string>
    <string name="nfibet3_text_num9BkcityresTXT">Water polo is a competitive team sport played in water between two teams of seven players each. The game consists of four quarters in which the two teams attempt to score goals by throWinnersg the ball into the opposing team\'s goal. The team with the most goals at the end of the game Winnerss the match. Each team is made up of six field players and one goalkeeper. Excluding the goalkeeper, players participate in both offensive and defensive roles. Water polo is typically played in an all-deep pool so that players cannot touch the bottom.A game of water polo mainly consists of the players swimming to move about the pool, treading water (mainly using the eggbeater kick), passing the ball, and shooting at the goal. Teamwork, tactical thinking and awareness are also highly important aspects in a game of water polo.</string>
    <string name="nfibet3_text_num10BkcityresTXT">Special equipment for water polo includes a water polo ball, a ball of varying colors which floats on the water; numbered and coloured caps; and two goals, which either float in the water or are attached to the sides of the pool.  The game is thought to have originated in Scotland in the mid-19th century; specifically, William Wilson is thought to have developed the game in the 1870s as a sort of water rugby. The game further developed with the formation of the London Water Polo League and has since expanded, becoming popular in parts of Europe, the United States, Brazil, China, Canada and Australia.The history of water polo as a team sport began as a demonstration of strength and swimming skill in mid-19th century England and Scotland, where water sports and racing exhibitions were a feature of county fairs and festivals.</string>
    <string name="nfibet3_text_num11BkcityresTXT">Handball (also known as team handball, European handball or Olympic handball)[3] is a team sport in which two teams of seven players each (six outcourt players and a goalkeeper) pass a ball using their hands with the aim of throWinnersg it into the goal of the other team. A standard match consists of two periods of 30 minutes, and the team that scores more goals Winnerss.  Modern handball is played on a court of 40 by 20 metres (131 by 66 ft), with a goal in the middle of each end. The goals are surrounded by a 6-metre (20 ft) zone where only the defending goalkeeper is allowed; goals must be scored by throWinnersg the ball from outside the zone or while diving into it. The sport is usually played indoors, but outdoor variants exist in the forms of field handball.</string>
    <string name="nfibet3_text_num12BkcityresTXT">Игра была кодифицирована в конце 19 века в Дании. Современный свод правил был опубликован в 1917 году Карлом Шеленцем, Максом Хайзером и Эрихом Конигом[5] 29 октября в Берлине, этот день считается датой рождения этого вида спорта.[1][6] С тех пор правила претерпели несколько изменений. Первый официальный матч по гандболу был сыгран в 1917 году в Германии.[1] Карл Шеленц изменил правила в 1919 году. Первые международные игры (по этим правилам) были сыграны с мужчинами в 1925 году (между Германией и Бельгией) и с женщинами в 1930 году (между Германией и Австрией). Олимпийские игры на летних Олимпийских играх 1936 года в Берлине на открытом воздухе, а в следующий раз на летних Олимпийских играх 1972 года в Мюнхене в помещении, и с тех пор гандбол стал олимпийским видом спорта. Женский гандбол был добавлен на летних Олимпийских играх 1976 года.</string>
</resources>


