<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/winline_bet_01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nfibet1"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".calc_main_project"
    >

    <soup.neumorphism.NeumorphTextView
        android:id="@+id/calc_main_project_01txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nfibet3_Winnersers"
        android:textSize="18sp"
        app:neumorph_shadowColorDark="@color/nfibet3_dark"
        app:neumorph_shadowColorLight="@color/nfibet3_light" />

    <TextView
        android:id="@+id/calc_main_project_bet_01_txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/nfibet3_black_text"
        android:textStyle="bold"
        android:text="@string/nfibet3_moneyWinners" />

    <EditText
        android:id="@+id/calc_main_project_01edittext1"
        android:inputType="number"
        android:maxLength="5"
        android:layout_width="150dp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/calc_main_project_01txt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nfibet3_koefWinners"
        android:textColor="@color/nfibet3_black_text"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/calc_main_project_01_koifWinner"
        android:inputType="number"
        android:maxLength="5"
        android:layout_width="150dp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/calc_main_project_01winTXTsum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/nfibet3_black_text"
        android:textStyle="bold"
        android:text="@string/nfibet3_WinnerspayWinners" />

    <Button
        android:id="@+id/calc_main_project_01sumRezults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/nfibet3_background_button"
        android:text="@string/nfibet3_Winnerssum"
        android:textAllCaps="false"
        android:textColor="@color/nfibet3_black" />


</LinearLayout>